049/double-proxy/envoy.yaml
# 静态配置
static_resources:
  listeners:
    # 绑定 listener 到 0.0.0.0:10000
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            # 匹配所有 host
            virtual_hosts:
              # 所有的请求都转发到 cluster : service1
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service1
          http_filters:
          - name: envoy.filters.http.router

  clusters:
    # service1 使用 strict_dns 作为服务发现类型，连接超时时间为 0.25s
    # 并且绑定到 app:8000
  - name: service1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app
                port_value: 8000
